2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed serialization issue ( flickr)
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Improved caching
	* Wrote very basic gridview code for Flickr
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Implemented caching for Flickr
	* Need to contact Phlickr to see how we could do better, since serialize does not work OK on objects
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug concerning Content-Length header
	* Changed default Unit size for setLocalFileSize to bytes
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Added BLOB support
	* modified file_download.php to support new header attributes
	* Added ImportLargeObject, UnlinkLargeObject to PG SQL abtraction
	* Make sure your PHP.ini contains the right value to allow big downloads
	* Check : http://ca3.php.net/manual/en/features.file-upload.common-pitfalls.php
	* ISF Live server is now configured to support 100 megabytes files
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed CSS IE Bug
	* Fixed SQL query
	* NEED HELP FROM A WEB DESIGNER !!!!!
	
2005-05-03 Francois Proulx <francois.proulx@gmail.com>
	* Disabled logging in Pattern Language archives
	
2005-05-03 Francois Proulx <francois.proulx@gmail.com>
	* Having for SQL query... :-(
	
2005-05-02 Francois Proulx <francois.proulx@gmail.com>
	* PatternLanguage is now completed
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Logout button will now destroy session AND render token USED
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug that could potentially let non owners add content in /content through content groups
	* Admin menu won't show node selector if the user is not owner of at least one hotspot
	* Added Width, height support for Picture
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Did my best for content styling ... ( it's 5h00 am )
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>